<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">T2D</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_battery_level">Battery Level:</string>
    <string name="example_percentage">100%</string>
    <string name="placeholder_device_name">Device Name</string>
    <string name="placeholder_percentage">100%</string>

    <string name="admob_id">ca-app-pub-2441210659621996/2767217866</string>
    <string name="placeholder_is_charging">Is charging.</string>
    <string name="label_sign_up_email">Email:</string>
    <string name="hint_email">example@email.com</string>
    <string name="button_sign_up">Sing up</string>
    <string name="label_sign_up_password">Password:</string>
    <string name="button_log_in">Log In</string>
    <string name="hint_password">Password</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="sign_up_with_twitter">Sign up with Twitter</string>
    <string name="login_with_facebook">Log in with Facebook</string>
    <string name="login_with_twitter">Log in with Twitter</string>
    <string name="action_refresh">Refresh</string>

</resources>
