<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:gravity="center" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView
                android:id="@+id/signUpEmailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_sign_up_email"
                android:layout_weight="0"/>

            <EditText android:id="@+id/signUpEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow>

        <TextView android:id="@+id/signUpPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_sign_up_password"
            android:layout_weight="0"/>

        <EditText android:id="@+id/signUpPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:layout_weight="1"
            android:inputType="textPassword" />

        </TableRow>


    </TableLayout>

    <Button android:id="@+id/button_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_sign_up"
        android:background="#FF5722"
        android:textColor="@android:color/white"/>

    <Button android:id="@+id/button_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_log_in"
        android:background="@android:color/transparent"
        android:textColor="#FF5722"/>

</LinearLayout>